--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -139,7 +139,7 @@
         </main>
 
 <!--Footer-->
-<!-- <div class="container-fluid">
+<div class="container-fluid">
     <footer class="row footerBg paddingTB">
         <div class="col-lg-6 col-xs-12">
             <p>Clínica Odontológica Manzo</p>
@@ -148,7 +148,7 @@
             <p>2024 Todos los derechos reservados</p>
         </div>
     </footer>
-</div> -->
+</div>
 
 <a href="https://api.whatsapp.com/send?phone=524461488777" class="btn-wsp" target="_blank"></a>
 <!--    <footer>
