--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,17 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
 
+    <!--Link CSS de Bootstrap descargado-->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <!--Fin Link CSS de Bootstrap descargado-->
+
+    <!--Inicia Liga CSS-->
+    <link rel="stylesheet" href="../css/style.css">
+    <!--Fin Liga CSS-->
+
     <!--Inicio Liga Favicon-->
     <link rel="icon" href="../assets/images/icon.ico">
     <!--Fin Liga Favicon-->
 
-    <!--Inicia Liga CSS-->
-    <link rel="stylesheet" href="../styles/style.css">
-    <!--Fin Liga CSS-->
-
 </head>
 <body>
-    <header>
+
+    <!-- nav + logo -->
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-xs-12">
+                <nav class="navbar navbar-expand-md navbar-light">
+                    <a class="navbar-brand" href="#">
+                        <img class="d-inline-block align-top" id="Logo1" src="../assets/images/logo.png" alt="Logo Clinica">
+                        <h2 class="d-inline-block align-bottom">Odontológica Manzo</h2>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav2">
+                        <ul class="navbar-nav w-100 d-flex justify-content-end">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./servicios.html">Servicios</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+
+ <!--   <header>
         <nav class="menu">
             <a href="index.html"> 
                 <img id="Logo1" src="../assets/images/logo.png" alt="Logo Clinica">
@@ -41,7 +81,7 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
     <a href="https://api.whatsapp.com/send?phone=524461488777" class="btn-wsp" target="_blank"></a>
     
@@ -147,9 +187,23 @@
         <img id="Peridoncia" src="../assets/images/periodoncia.jpeg" alt="Peridoncia">
     </main>
 
-    <footer>
+<!--Footer-->
+<div class="container-fluid">
+    <footer class="row footerBg paddingTB">
+        <div class="col-lg-6 col-xs-12">
+            <p>Clínica Odontológica Manzo</p>
+        </div>
+        <div class="col-lg-6 col-xs-12">
+            <p>2024 Todos los derechos reservados</p>
+        </div>
+    </footer>
+</div>
+
+<!--    <footer>
         <p id="NombreClinicaFooter">Clínica Odontológica Manzo</p>
         <p id="DerechosReservados">2024 Todos los derechos reservados</p>
-    </footer>
+    </footer> -->
+
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
