--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,15 +19,17 @@
     <!--Fin Liga Favicon-->
 
 </head>
+
 <body class="contacto">
     <!-- nav + logo -->
     <header class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
-                <nav class="navbar navbar-expand-md navbar-light">
+                <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top" id="Logo1" src="../assets/images/logo.png" alt="Logo Clinica">
-                        <h2 class="d-inline-block align-bottom">Odontológica Manzo</h2>
+                        <img class="d-inline-block align-top" id="Logo1" src="../assets/images/logo.png"
+                            alt="Logo Clinica">
+                        <h2 class="d-inline-block align-bottom">Odontopediatría Manzo</h2>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,14 +40,17 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./contacto.html">Contacto</a>
-                            </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -53,75 +59,56 @@
         </div>
     </header>
 
-<!--    <header>
-        <nav class="menu">
-            <a href="index.html"> 
-                <img id="Logo1" src="../assets/images/logo.png" alt="Logo Clinica">
-            </a>
-            <p id="NombreClinica">
-                Clínica Odontológica Manzo 
-            </p>
-            <ul>
-                <li>
-                    <a href="../index.html">Home</a>
-                </li>
-                <li>
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="./servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="./blog.html">Blog</a>
-                </li>
-                <li>
-                    <a href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
-    </header> -->
-
-    <a href="https://api.whatsapp.com/send?phone=524461488777" class="btn-wsp" target="_blank"></a>
     <main>
-        <section>
-            <h1>Contacto</h1>
-            <form method="post" name="FormContacto">
-                <!--Nombre-->
-                <div id="nombre">
-                    <label for="">Nombre</label>
-                    <input type="text" name="nombre">
-                </div>
-                <!--Email-->
-                <div id="email">
-                    <label for="">E-mail</label>
-                    <input type="email" name="email">
-                </div>
-                <!--Telefono-->
-                <div id="telefono">
-                    <label for="">Teléfono</label>
-                    <input type="number" name="telefono">
-                </div>
-                <p id="mensaje">Tu mensaje:</p>
-                <textarea name="comentarios" id="comentarios" cols="30" rows="7"></textarea>
-                <input type="submit" value="Enviar" id="enviar">
-            </form>
+        <section class="container">
+            <div class="row">
+                <h1 class="text-center">Contacto</h1>
+            </div>
+
+            <div class="row">
+                <form method="post" name="FormContacto">
+                    <!--Nombre-->
+                    <div id="nombre" class="d-flex justify-content-center">
+                        <label for="">Nombre</label>
+                        <input type="text" name="nombre">
+                    </div>
+                    <!--Email-->
+                    <div id="email" class="d-flex justify-content-center">
+                        <label for="">E-mail</label>
+                        <input type="email" name="email">
+                    </div>
+                    <!--Telefono-->
+                    <div id="telefono" class="d-flex justify-content-center">
+                        <label for="">Teléfono</label>
+                        <input type="number" name="telefono">
+                    </div>
+                    <p id="mensaje" class="d-flex justify-content-center">Tu mensaje:</p>
+                    <div class="d-flex justify-content-center">
+                        <textarea name="comentarios" id="comentarios" cols="30" rows="7"></textarea>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <input type="submit" value="Enviar" id="enviar">
+                    </div>
+                </form>
+            </div>
         </section>
     </main>
-<!--Footer-->
+
+    <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
+    
+    <!--Footer-->
     <div class="container-fluid">
         <footer class="row footerBg paddingTB">
             <div class="col-lg-6 col-xs-12">
-                <p>Clínica Odontológica Manzo</p>
+                <p>Odontopediatría Manzo</p>
             </div>
             <div class="col-lg-6 col-xs-12">
                 <p>2024 Todos los derechos reservados</p>
             </div>
         </footer>
     </div>
- <!---   <footer>
-        <p id="NombreClinicaFooter">Clínica Odontológica Manzo</p>
-        <p id="DerechosReservados">2024 Todos los derechos reservados</p>
-    </footer> -->
+
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
