--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         </div>
     </header>
 
-    <main class="container-fluid pagina">
-        <div class="row paddingTB">
-            <section class="col-lg-5 col-xs-12">
+    <main class="container-fluid background">
+        <div class="row">
+            <section class="col-lg-6 col-xs-12">
                 <img id="DentistaFeliz" src="./assets/images/nina.png" alt="Niña en el dentista" class="img-fluid">
             </section>
-            <section class="col-lg-7 col-xs-12 texto_home">
+            <section class="col-lg-6 col-xs-12 texto_home">
                 <h2>¿Qué es la Odontopediatría?</h2>
                 <p>
                     La Odontopediatría es la especialidad de la Odontología que se enfoca en atender pacientes
@@ -96,19 +96,31 @@
                     no tenga que someterse en un futuro a una cirugía más compleja.
                 </p>
 
-                <h4>Un espacio adaptado a ellos</h4>
-                <p>
+                <!-- <h4>Un espacio adaptado a ellos</h4> -->
+                <!-- <p>
                     La adaptación de las instalacones, favorece que l@s niñ@s <b>pierdan el miedo</b> al dentista y
                     aprendan a
                     mantener su boca bien cuidada, a la vez que se diviertan jugando, coloreando y haciendo nuevos
                     amigos.
-                </p>
+                </p> -->
 
-                <p id="Conclusion">¡Ahora ya sabes con qué dentista llevar a tus niñ@s.! <a
-                        href="./pages/contacto.html">!Agenda tu cita!</a>
-                </p>
+                <!--<h4>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</h4> <a
+                        href="./pages/contacto.html"><h3>Agenda tu cita</h3></a> -->
+                
             </section>
         </div>
+
+        <h4>Un espacio adaptado a ellos</h4>
+        <p>
+            La adaptación de las instalacones, favorece que l@s niñ@s <b>pierdan el miedo</b> al dentista y
+            aprendan a
+            mantener su boca bien cuidada, a la vez que se diviertan jugando, coloreando y haciendo nuevos
+            amigos.
+        </p>
+
+        <h4>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</h4> <a
+                href="./pages/contacto.html"><h3>Agenda tu cita</h3></a>
+
     </main>
 
     <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
