--- a/pages/blog.html
+++ b/pages/blog.html
@@ -59,7 +59,7 @@
         </div>
     </header>
 
-    <main class="pagina">
+    <main class="container-fluid background">
         <div class="container texto_blog">
             <div class="row">
                 <h1 class="text-center">Blog</h1>
@@ -90,7 +90,7 @@
                     </p>
                 </section>
             </div>
-            <div class="row">
+            <div class="row borde-abajo">
                 <h4>Identifica tu tipo de problema de alineación</h4>
                 <p>
                     La variedad de problemas de alineación dental y maloclusión es muy amplia.
@@ -184,7 +184,7 @@
                 </ul>
             </div>
 
-            <div class="row paddingTB">
+            <div class="row paddingTB  align-items-center">
                 <section class="col-lg-3 col-xs-12">
                     <img id="Blanqueamiento2" src="../assets/images/blanqueamiento2.jpg" alt="Blanqueamiento Dental"
                         class="img-fluid">
@@ -201,7 +201,6 @@
                         periódica para mantener los dientes blancos y brillantes. Se suele realizar cada 6
                         meses o 1 año, dependiendo del caso particular.
                     </p>
-
                     <h4>¿Por qué es necesario relizarlo recurrentemente?</h4>
                     <p>
                         Los dientes pueden perder su color blanco natural por diversos motivos, como:
@@ -217,16 +216,17 @@
                             Envejecimiento: los dientes se desgastan con el tiempo y se vuelven más
                             amarillos.
                         </li>
-                        <li>
+                        <!-- <li>
                             Medicamentos: algunos medicamentos pueden causar manchas en los dientes.
                         </li>
                         <li>
                             Traumatismos: un golpe en el diente puede provocar que se vuelva más oscuro.
-                        </li>
+                        </li> -->
                     </ul>
                 </section>
             </div>
             <div class="row">
+                
                 <p>
                     El blanqueamiento dental recurrente ayuda a eliminar las manchas y devolver a los
                     dientes su color blanco natural. Este tratamiento es seguro y eficaz, y no daña
