--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class="contacto">
+<body>
     <!-- nav + logo -->
     <header class="container-fluid">
         <div class="row">
@@ -59,43 +59,57 @@
         </div>
     </header>
 
-    <main>
+    <main class="background">
         <section class="container">
             <div class="row">
                 <h1 class="text-center">Contacto</h1>
             </div>
 
-            <div class="row">
-                <form method="post" name="FormContacto">
-                    <!--Nombre-->
-                    <div id="nombre" class="d-flex justify-content-center">
-                        <label for="">Nombre</label>
-                        <input type="text" name="nombre">
+            <form method="post" name="FormContacto">
+
+                <!--Nombre-->
+                <div class="row mb-3">
+                    <label class="col-2 col-form-label" for="nombre">Nombre</label>
+                    <div class="col-10">
+                        <input type="text" class="form-control" name="nombre">
                     </div>
-                    <!--Email-->
-                    <div id="email" class="d-flex justify-content-center">
-                        <label for="">E-mail</label>
-                        <input type="email" name="email">
+                </div>
+
+                <!--Email-->
+                <div class="row mb-3">
+                    <label class="col-2 col-form-label" for="email">E-mail</label>
+                    <div class="col-10">
+                        <input type="email" class="form-control" name="email">
                     </div>
-                    <!--Telefono-->
-                    <div id="telefono" class="d-flex justify-content-center">
-                        <label for="">Teléfono</label>
-                        <input type="number" name="telefono">
+                </div>
+
+
+                <!--Telefono-->
+                <div class="row mb-3">
+                    <label class="col-2 col-form-label" for="telefono">Teléfono</label>
+                    <div class="col-10">
+                        <input type="number" class="form-control" name="telefono">
                     </div>
-                    <p id="mensaje" class="d-flex justify-content-center">Tu mensaje:</p>
-                    <div class="d-flex justify-content-center">
-                        <textarea name="comentarios" id="comentarios" cols="30" rows="7"></textarea>
+                </div>
+
+                <!--Mensaje-->
+                <div class="row mb-3">
+                    <label class="col-2 col-form-label" for="comentarios">Tu mensaje:</label>
+                    <div class="col-10">
+                        <textarea name="comentarios" class="form-control"id="comentarios" cols="20" rows="8"></textarea>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <input type="submit" value="Enviar" id="enviar">
-                    </div>
-                </form>
-            </div>
+                </div>
+
+                <!--Enviar-->
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary" value="Enviar" id="enviar">Enviar</button>
+                </div>
+            </form>
         </section>
     </main>
 
     <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
-    
+
     <!--Footer-->
     <div class="container-fluid">
         <footer class="row footerBg paddingTB">
