--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!--Fin Link CSS de Bootstrap descargado-->
 
-    <!--Inicia Liga CSS-->
+    <!--Inicia Liga CSS general-->
     <link rel="stylesheet" href="../css/style.css">
     <!--Fin Liga CSS-->
+
 
     <!--Inicio Liga Favicon-->
     <link rel="icon" href="../assets/images/icon.ico">
@@ -60,125 +61,120 @@
         </div>
     </header>
 
-    <main class="texto_servicios">
-        <h1>Servicios</h1>
+    <main class="background">
+        <h1 class="centrado">Servicios</h1>
 
-        <div class="texto_limpieza">
-            <h3>Limpieza dental</h3>
-            <p>
-                Es un procedimiento indoloro, cómodo, rápido y efectivo mediante el cual tu
-                odontólogo removerá manchas, sarro y placa bacteriana que podría afectar la salud
-                de tus dientes y encías generando enfermedades periodontales. Este procedimiento
-                es libre de riesgos de generar heridas o irritación en las encías y daño en el esmalte,
-                mejorando tu salud y estética dental.
-            </p>
-            <p>
-                También se le conoce como profilaxis dental.
-            </p>
-            <p>
-                Con tecnlología de ultrasonido dental, en tan solo una sesión, retirarás
-                sarro y placa. Complementa con aplicación de flúor.
-            </p>
-        </div>
-        <div class="imagen_limpieza">
-            <img id="Limpieza" src="../assets/images/limpieza.png" alt="Limpieza Dental">
+        <h3>Limpieza dental</h3>
+        <p>
+            Es un procedimiento indoloro, cómodo, rápido y efectivo mediante el cual tu
+            odontólogo removerá manchas, sarro y placa bacteriana que podría afectar la salud
+            de tus dientes y encías generando enfermedades periodontales. Este procedimiento
+            es libre de riesgos de generar heridas o irritación en las encías y daño en el esmalte,
+            mejorando tu salud y estética dental.
+        </p>
+        <p>
+            También se le conoce como profilaxis dental.
+        </p>
+        <p>
+            Con tecnlología de ultrasonido dental, en tan solo una sesión, retirarás
+            sarro y placa. Complementa con aplicación de flúor.
+        </p>
+        <div class="centrado borde-abajo">
+            <img class="imagen--servicios" src="../assets/images/limpieza.png" alt="Limpieza Dental">
         </div>
 
-        <div class="texto_resina">
-            <h3>Resina dental</h3>
-            <p>
-                Las resinas dentales son una solución ideal que permite curar caries y corregir
-                cavidades, lesiones o fisuras en los dientes de forma segura, estética y natural.
-                No verás diferencia con tus dientes naturales y recuperarás la fuerza de tu dentadura.
-                También es una buena opción para reemplazar amalgamas o para modificar la forma y
-                dimensiones algún diente para volverle más estético y funcional.
-            </p>
-            <p>
-                Se forma con materiales de calidad que constan de un componente orgánico
-                polimérico y un componente inorgánico que puede ser cuarzo, zirconita o
-                silicato de aluminio.
-            </p>
-            <p>
-                Su textura y color son muy similares a los dientes naturales, tienen buena
-                adhesión y no desprenden sustancias dañinas para el cuerpo.
-            </p>
-        </div>
-        <div class="imagen_resina">
-            <img id="Resina" src="../assets/images/resina.png" alt="Resina">
+        <h3>Resina dental</h3>
+        <p>
+            Las resinas dentales son una solución ideal que permite curar caries y corregir
+            cavidades, lesiones o fisuras en los dientes de forma segura, estética y natural.
+            No verás diferencia con tus dientes naturales y recuperarás la fuerza de tu dentadura.
+            También es una buena opción para reemplazar amalgamas o para modificar la forma y
+            dimensiones algún diente para volverle más estético y funcional.
+        </p>
+        <p>
+            Se forma con materiales de calidad que constan de un componente orgánico
+            polimérico y un componente inorgánico que puede ser cuarzo, zirconita o
+            silicato de aluminio.
+        </p>
+        <p>
+            Su textura y color son muy similares a los dientes naturales, tienen buena
+            adhesión y no desprenden sustancias dañinas para el cuerpo.
+        </p>
+
+        <div class="centrado borde-abajo">
+            <img class="imagen--servicios" src="../assets/images/resina.png" alt="Resina">
         </div>
 
-        <div class="texto_coronas">
-            <h3>Coronas dentales</h3>
-            <p>
-                Conserva la forma de tu dentadura, la correcta masticación, posición y fortalece
-                tus dientes con este tratamiento.
-            </p>
-            <p>
-                Si te falta una pieza dental, necesitas un implante dental o te realizaron una
-                endodoncia, una corona dental puede ser la mejor opción para brindar fuerza a
-                tu dentadura de forma estética. Funcionan como pequeñas fundas que recubren tu
-                diente para protegerlo por lo que también ayuda a cubrir fisuras, cavidades y
-                mejorar el aspecto de un diente deformado o descolorido.
-            </p>
-            <p>
-                Logra una mordida fuerte y segura
-            </p>
-        </div>
-        <div class="imagen_coronas">
-            <img id="Corona" src="../assets/images/corona.jpg" alt="Corona">
+        <h3>Coronas dentales</h3>
+        <p>
+            Conserva la forma de tu dentadura, la correcta masticación, posición y fortalece
+            tus dientes con este tratamiento.
+        </p>
+        <p>
+            Si te falta una pieza dental, necesitas un implante dental o te realizaron una
+            endodoncia, una corona dental puede ser la mejor opción para brindar fuerza a
+            tu dentadura de forma estética. Funcionan como pequeñas fundas que recubren tu
+            diente para protegerlo por lo que también ayuda a cubrir fisuras, cavidades y
+            mejorar el aspecto de un diente deformado o descolorido.
+        </p>
+        <p>
+            Logra una mordida fuerte y segura
+        </p>
+
+        <div class="centrado borde-abajo">
+            <img class="imagen--servicios" src="../assets/images/corona.jpg" alt="Corona">
         </div>
 
-        <div class="texto_endodoncia">
-            <h3>Endodoncia</h3>
-            <p>
-                Evita que un diente tenga que ser extraído tras daño grave por caries, gracias
-                a la endodoncia y endoposte.
-            </p>
-            <p>
-                Cuando una caries avanza sin tratamiento, hay traumatismos importantes,
-                desgaste de los dientes o por ciertos tratamientos dentales se puede
-                comprometer la vitalidad de todo tu diente; para evitar que tenga que ser
-                extraído la mejor opción es una endodoncia. En ella se eliminar la parte más
-                profunda del diente lesionado (conocida como pulpa dental) para limpiar por
-                dentro y llenar el espacio resultante con un material inerte.
-            </p>
-            <p>
-                Te ayudará a mitigar el dolor y sensibilidad, mantener una buena salud dental,
-                evitar la pérdida de dientes naturales y extracciones.
-            </p>
+
+        <h3>Endodoncia</h3>
+        <p>
+            Evita que un diente tenga que ser extraído tras daño grave por caries, gracias
+            a la endodoncia y endoposte.
+        </p>
+        <p>
+            Cuando una caries avanza sin tratamiento, hay traumatismos importantes,
+            desgaste de los dientes o por ciertos tratamientos dentales se puede
+            comprometer la vitalidad de todo tu diente; para evitar que tenga que ser
+            extraído la mejor opción es una endodoncia. En ella se eliminar la parte más
+            profunda del diente lesionado (conocida como pulpa dental) para limpiar por
+            dentro y llenar el espacio resultante con un material inerte.
+        </p>
+        <p>
+            Te ayudará a mitigar el dolor y sensibilidad, mantener una buena salud dental,
+            evitar la pérdida de dientes naturales y extracciones.
+        </p>
+
+        <div class="centrado borde-abajo">
+            <img class="imagen--servicios" src="../assets/images/endodoncia.jpg" alt="Endodoncia">
         </div>
-        <div class="imagen_endodoncia">
-            <img id="Endodoncia" src="../assets/images/endodoncia.jpg" alt="Endodoncia">
-        </div>
-        <div class="texto_blanqueamiento">
-            <h3>Blanqueamiento</h3>
-            <p>
-                Una sonrisa deslumbrante en menos tiempo, con la última tecnología en blanqueamiento dental.
-            </p>
-            <p>
-                Despídete de los dientes amarillos o manchados con la tecnología de blanqueamiento zoom.
-            </p>
-        </div>
-        <div class="imagen_blanqueamiento">
-            <img id="Blanqueamiento" src="../assets/images/blanqueamiento.png" alt="Blanqueamiento
+
+        <h3>Blanqueamiento</h3>
+        <p>
+            Una sonrisa deslumbrante en menos tiempo, con la última tecnología en blanqueamiento dental.
+        </p>
+        <p>
+            Despídete de los dientes amarillos o manchados con la tecnología de blanqueamiento zoom.
+        </p>
+
+        <div class="centrado borde-abajo">
+            <img class="imagen--servicios" src="../assets/images/blanqueamiento.png" alt="Blanqueamiento
             Dental">
         </div>
 
 
-        <div class="texto_peridoncia">
-            <h3>Periodoncia</h3>
-            <p>
-                Una encía sana es la base de una dentadura fuerte, por eso prevenimos y resolvemos
-                tus problemas de encías y en los huesos que sostienen tu dentadura.
-            </p>
-            <p>
-                Para que tus dientes tengan un cimiento sólido, tus encías deben estar en las
-                mejores condiciones. La periodoncia se encarga del cuidado y tratamiento de las
-                enfermedades que afectan a los tejidos que rodean, protegen y sujetan los dientes.
-            </p>
-        </div>
-        <div class="imagen_peridoncia">
-            <img id="Peridoncia" src="../assets/images/periodoncia.jpeg" alt="Peridoncia">
+        <h3>Periodoncia</h3>
+        <p>
+            Una encía sana es la base de una dentadura fuerte, por eso prevenimos y resolvemos
+            tus problemas de encías y en los huesos que sostienen tu dentadura.
+        </p>
+        <p>
+            Para que tus dientes tengan un cimiento sólido, tus encías deben estar en las
+            mejores condiciones. La periodoncia se encarga del cuidado y tratamiento de las
+            enfermedades que afectan a los tejidos que rodean, protegen y sujetan los dientes.
+        </p>
+
+        <div class="centrado">
+            <img class="imagen--servicios" src="../assets/images/periodoncia.jpeg" alt="Peridoncia">
         </div>
     </main>
 
