--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <!--Fin Liga CSS-->
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
     <!--Inicio Liga Favicon-->
     <link rel="icon" href="./assets/images/icon.ico">
     <!--Fin Liga Favicon-->
@@ -39,19 +41,19 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav w-100 d-flex justify-content-end">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Inicio</a>
+                                <a class="nav-link agrandar" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                                <a class="nav-link agrandar" href="pages/nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                                <a class="nav-link agrandar" href="pages/servicios.html">Servicios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/blog.html">Blog</a>
+                                <a class="nav-link agrandar" href="pages/blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                                <a class="nav-link agrandar" href="pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -118,9 +120,8 @@
             amigos.
         </p>
 
-        <h4>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</h4> <a
-                href="./pages/contacto.html"><h3>Agenda tu cita</h3></a>
-
+        <h4>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</h4> 
+        <a href="./pages/contacto.html"><h3 class="animate__animated animate__pulse animate__infinite">Agenda tu cita</h3></a>
     </main>
 
     <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
