--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,6 +30,7 @@
                         <img class="d-inline-block align-top" id="Logo1" src="../assets/images/logo.png"
                             alt="Logo Clinica">
                         <h2 class="d-inline-block align-bottom">Odontopediatría Manzo</h2>
+
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,18 +39,18 @@
                     <div class="collapse navbar-collapse" id="navbarNav2">
                         <ul class="navbar-nav w-100 d-flex justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html">Inicio</a>
+                                <a class="nav-link agrandar" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                                <a class="nav-link agrandar" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./servicios.html">Servicios</a>
+                                <a class="nav-link agrandar" href="./servicios.html">Servicios</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item agrandar">
                                 <a class="nav-link" href="./blog.html">Blog</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item agrandar">
                                 <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
