--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,19 +39,19 @@
                     <div class="collapse navbar-collapse" id="navbarNav2">
                         <ul class="navbar-nav w-100 d-flex justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html">Inicio</a>
+                                <a class="nav-link agrandar" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                                <a class="nav-link agrandar" href="./nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./servicios.html">Servicios</a>
+                                <a class="nav-link agrandar" href="./servicios.html">Servicios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./blog.html">Blog</a>
+                                <a class="nav-link agrandar" href="./blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./contacto.html">Contacto</a>
+                                <a class="nav-link agrandar" href="./contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
