--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Fin Link CSS de Bootstrap descargado-->
 
     <!--Inicia Liga CSS-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <!--Fin Liga CSS-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
