--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,7 +11,7 @@
     <!--Fin Link CSS de Bootstrap descargado-->
 
     <!--Inicia Liga CSS-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!--Fin Liga CSS-->
 
     <!--Inicio Liga Favicon-->
