--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <meta name="description" content="La Clinica de Odontopediatria Manzo se 
+    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
+    Se encuentra en la Ciudad de Querétaro, México">
+    <meta name="keywords" content="Odontopediatra, Odontopediatría, Manzo, Querétaro, México,
+    Dentista, Dentista para niños, niños, niñas, english spoken">
+
+    <title>Odontopediatría Manzo</title>
 
     <!--Link CSS de Bootstrap descargado-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -14,12 +20,13 @@
     <link rel="stylesheet" href="./css/main.css">
     <!--Fin Liga CSS-->
 
+    <!--Inicio Liga Animaciones-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!--Fin Liga Animaciones-->
 
     <!--Inicio Liga Favicon-->
     <link rel="icon" href="./assets/images/icon.ico">
     <!--Fin Liga Favicon-->
-
 </head>
 
 <body>
@@ -30,9 +37,9 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top" id="Logo1" src="./assets/images/logo.png"
-                            alt="Logo Clinica">
-                        <h2 class="d-inline-block align-bottom">Odontopediatría Manzo</h2>
+                        <img class="d-inline-block align-top Logo1" src="./assets/images/logo.png"
+                            alt="Logo Clinica Manzo">
+                        <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,19 +71,22 @@
 
     <main class="container-fluid background">
         <div class="row">
+            <!--Imagen-->
             <section class="col-lg-6 col-xs-12">
-                <img id="DentistaFeliz" src="./assets/images/nina.png" alt="Niña en el dentista" class="img-fluid">
+                <img id="DentistaFeliz" src="./assets/images/nina.png" alt="Niña feliz en el dentista"
+                    class="img-fluid">
             </section>
+            <!--Texto al lado de la imagen-->
             <section class="col-lg-6 col-xs-12 texto_home">
-                <h2>¿Qué es la Odontopediatría?</h2>
+                <h1 class=>¿Qué es la Odontopediatría?</h1>
                 <p>
                     La Odontopediatría es la especialidad de la Odontología que se enfoca en atender pacientes
                     <b>desde su nacimiento</b> hasta la edad adulta.
                 </p>
 
-                <h3>¿Por qué llevar a l@s niñ@s con un Odontopediatra?</h3>
+                <h2>¿Por qué llevar a l@s niñ@s con un Odontopediatra?</h2>
 
-                <h4>Expertos en la salud dental de los niñ@s</h4>
+                <h3>Expertos en la salud dental de los niñ@s</h3>
                 <p>
                     Un odontopediatra cuenta con una <b>licenciatura en Odontología general, seguida por una
                         especialidad</b>
@@ -87,7 +97,7 @@
                     y malposiciones o maloclusiones dentarias.
                 </p>
 
-                <h4>Prevención de problemas dentales</h4>
+                <h3>Prevención de problemas dentales</h3>
                 <p>
                     La prevención es el mejor tratamiento para conseguir una sonrisa sana y radiante. La <b>detección
                         temprana
@@ -97,22 +107,11 @@
                     para que l@s niñ@s
                     no tenga que someterse en un futuro a una cirugía más compleja.
                 </p>
-
-                <!-- <h4>Un espacio adaptado a ellos</h4> -->
-                <!-- <p>
-                    La adaptación de las instalacones, favorece que l@s niñ@s <b>pierdan el miedo</b> al dentista y
-                    aprendan a
-                    mantener su boca bien cuidada, a la vez que se diviertan jugando, coloreando y haciendo nuevos
-                    amigos.
-                </p> -->
-
-                <!--<h4>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</h4> <a
-                        href="./pages/contacto.html"><h3>Agenda tu cita</h3></a> -->
-                
             </section>
         </div>
 
-        <h4>Un espacio adaptado a ellos</h4>
+        <!--Texto abajo de la imagen-->
+        <h3>Un espacio adaptado a ellos</h3>
         <p>
             La adaptación de las instalacones, favorece que l@s niñ@s <b>pierdan el miedo</b> al dentista y
             aprendan a
@@ -120,10 +119,13 @@
             amigos.
         </p>
 
-        <h4>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</h4> 
-        <a href="./pages/contacto.html"><h3 class="animate__animated animate__pulse animate__infinite">Agenda tu cita</h3></a>
+        <p class="fs-3"> <strong>¡Ahora ya sabes con qué dentista llevar a tus niñ@s!</strong></p>
+        <a href="./pages/contacto.html">
+            <p class="animate__animated animate__pulse animate__infinite">Agenda tu cita</p>
+        </a>
     </main>
 
+    <!--Boton whats-->
     <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
 
     <!--Footer-->
