--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La Clinica de Odontopediatria Manzo se 
+    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
+    Se encuentra en la Ciudad de Querétaro, México">
+    <meta name="keywords" content="Odontopediatra, Odontopediatría, Manzo, Querétaro, México,
+    Dentista, Dentista para niños, niños, niñas, english spoken">
+
     <title>Blog</title>
 
     <!--Link CSS de Bootstrap descargado-->
@@ -27,9 +33,9 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top" id="Logo1" src="../assets/images/logo.png"
-                            alt="Logo Clinica">
-                        <h2 class="d-inline-block align-bottom">Odontopediatría Manzo</h2>
+                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.png"
+                            alt="Logo Clinica Manzo">
+                        <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,10 +73,11 @@
 
             <div class="row paddingTB">
                 <section class="col-lg-3 col-xs-12">
-                    <img id="Alineadores" src="../assets/images/alineadores.jpg" alt="Alineadores" class="img-fluid">
+                    <img id="Alineadores" src="../assets/images/alineadores.jpg" alt="Alineadores Dentales"
+                        class="img-fluid">
                 </section>
                 <section class="col-lg-9 col-xs-12">
-                    <h3>¿Soy candidato a alinear mis dientes con alineadores invisibles?</h3>
+                    <h2>¿Soy candidato a alinear mis dientes con alineadores invisibles?</h2>
                     <p>
                         En la búsqueda de una sonrisa perfecta, cada vez más personas recurren a
                         opciones modernas y discretas, como los alineadores invisibles, para corregir
@@ -79,7 +86,7 @@
                         ¿cómo saber si eres candidato para alinear tus dientes con alineadores invisibles?
                         Te compartimos los pasos para saberlo.
                     </p>
-                    <h4>Evalúa tu salud dental</h4>
+                    <h3>Evalúa tu salud dental</h3>
                     <p>
                         Antes de considerar cualquier tratamiento de ortodoncia, es fundamental realizar
                         una evaluación de la salud dental. Un dentista o un ortodoncista realizará un
@@ -91,7 +98,7 @@
                 </section>
             </div>
             <div class="row borde-abajo">
-                <h4>Identifica tu tipo de problema de alineación</h4>
+                <h3>Identifica tu tipo de problema de alineación</h3>
                 <p>
                     La variedad de problemas de alineación dental y maloclusión es muy amplia.
                     Es importante comprender qué problemas específicos pueden abordarse con este
@@ -138,7 +145,7 @@
                     </li>
                 </ul>
 
-                <h4>Valora tu compromiso y cumplimiento con los alineadores invisibles</h4>
+                <h3>Valora tu compromiso y cumplimiento con los alineadores invisibles</h3>
                 <p>
                     El éxito del tratamiento con alineadores invisibles también depende en gran
                     medida del compromiso y el cumplimiento del paciente. Los alineadores deben
@@ -147,7 +154,7 @@
                     monitorear el progreso y realizar ajustes según sea necesario.
                 </p>
 
-                <h4>¿Cuándo NO eres candidato para alinear tus dientes con alineadores invisibles?</h4>
+                <h3>¿Cuándo NO eres candidato para alinear tus dientes con alineadores invisibles?</h3>
                 <p>
                     Si bien los alineadores invisibles son una excelente opción para corregir una
                     variedad de problemas de alineación dental, existen ciertos casos en los que
@@ -190,7 +197,7 @@
                         class="img-fluid">
                 </section>
                 <section class="col-lg-9 col-xs-12">
-                    <h3>5 señales de que tus dientes necesitan un blanqueamiento dental</h3>
+                    <h2>5 señales de que tus dientes necesitan un blanqueamiento dental</h2>
                     <p>
                         Existen ciertos factores que pueden hacer que nuestros dientes pierdan su
                         brillo natural. Si te has preguntado si necesitas un blanqueamiento dental,
@@ -201,7 +208,7 @@
                         periódica para mantener los dientes blancos y brillantes. Se suele realizar cada 6
                         meses o 1 año, dependiendo del caso particular.
                     </p>
-                    <h4>¿Por qué es necesario relizarlo recurrentemente?</h4>
+                    <h3>¿Por qué es necesario relizarlo recurrentemente?</h3>
                     <p>
                         Los dientes pueden perder su color blanco natural por diversos motivos, como:
                     </p>
@@ -216,17 +223,11 @@
                             Envejecimiento: los dientes se desgastan con el tiempo y se vuelven más
                             amarillos.
                         </li>
-                        <!-- <li>
-                            Medicamentos: algunos medicamentos pueden causar manchas en los dientes.
-                        </li>
-                        <li>
-                            Traumatismos: un golpe en el diente puede provocar que se vuelva más oscuro.
-                        </li> -->
                     </ul>
                 </section>
             </div>
             <div class="row">
-                
+
                 <p>
                     El blanqueamiento dental recurrente ayuda a eliminar las manchas y devolver a los
                     dientes su color blanco natural. Este tratamiento es seguro y eficaz, y no daña
@@ -234,7 +235,7 @@
                     de que es momento de considerar un blanqueamiento dental.
                 </p>
 
-                <h4>Señales de que necesitas un blanqueamiento dental</h4>
+                <h3>Señales de que necesitas un blanqueamiento dental</h3>
                 <ol>
                     <li>
                         Dientes Amarillentos o Manchados: Es uno de los signos más evidentes. El consumo
@@ -275,6 +276,7 @@
         </div>
     </main>
 
+    <!--Boton de Whats-->
     <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
 
     <!--Footer-->
@@ -289,6 +291,8 @@
         </footer>
     </div>
 
+    <!-- JS de Bootstrap descargado-->
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
