--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La Clinica de Odontopediatria Manzo se 
+    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
+    Se encuentra en la Ciudad de Querétaro, México">
+    <meta name="keywords" content="Odontopediatra, Odontopediatría, Manzo, Querétaro, México,
+    Dentista, Dentista para niños, niños, niñas, english spoken">
+
     <title>Contacto</title>
 
     <!--Link CSS de Bootstrap descargado-->
@@ -27,8 +33,8 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top" id="Logo1" src="../assets/images/logo.png"
-                            alt="Logo Clinica">
+                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.png"
+                            alt="Logo Clinica Manzo">
                         <h2 class="d-inline-block align-bottom">Odontopediatría Manzo</h2>
 
                     </a>
@@ -97,7 +103,8 @@
                 <div class="row mb-3">
                     <label class="col-2 col-form-label" for="comentarios">Tu mensaje:</label>
                     <div class="col-10">
-                        <textarea name="comentarios" class="form-control"id="comentarios" cols="20" rows="8"></textarea>
+                        <textarea name="comentarios" class="form-control" id="comentarios" cols="20"
+                            rows="8"></textarea>
                     </div>
                 </div>
 
@@ -109,6 +116,7 @@
         </section>
     </main>
 
+    <!--Boton de Whats-->
     <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
 
     <!--Footer-->
@@ -123,6 +131,7 @@
         </footer>
     </div>
 
+    <!-- JS de Bootstrap descargado-->
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
