--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La Clinica de Odontopediatria Manzo se 
+    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
+    Se encuentra en la Ciudad de Querétaro, México">
+    <meta name="keywords" content="Odontopediatra, Odontopediatría, Manzo, Querétaro, México,
+    Dentista, Dentista para niños, niños, niñas, english spoken">
+
     <title>Nosotros</title>
 
     <!--Link CSS de Bootstrap descargado-->
@@ -28,9 +34,9 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top" id="Logo1" src="../assets/images/logo.png"
-                            alt="Logo Clinica">
-                        <h2 class="d-inline-block align-bottom">Odontopediatría Manzo</h2>
+                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.png"
+                            alt="Logo Clinica Manzo">
+                        <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +66,7 @@
         </div>
     </header>
 
-    <main class="container-fluid background"> <!--.texto_nosotros-->
+    <main class="container-fluid background">
         <h1 class="centrado">Nosotros</h1>
         <p>Somos un grupo de profesionales médicos apasionados por la salud bucal de las
             personas para contribuir con esto en la mejora de la salud general, bienestar
@@ -71,7 +77,8 @@
         <!--Seccion Daniel-->
         <div class="row align-items-center borde-abajo">
             <section class="col-lg-6 col-xs-12">
-                <img src="../assets/images/daniel.jpg" alt="Odontologo Daniel" class="img-fluid imagen--nosotros">
+                <img src="../assets/images/daniel.jpg" alt="Foto Odontologo Daniel Manzo"
+                    class="img-fluid imagen--nosotros">
             </section>
             <section class="col-lg-6 col-xs-12 texto_home">
                 <h3>Doctor Daniel Manzo</h3>
@@ -101,14 +108,15 @@
                 </ul>
             </section>
             <section class="col-lg-6 col-xs-12">
-                <img src="../assets/images/estefi.png" alt="Odontologa Estefania" class="img-fluid imagen--nosotros">
+                <img src="../assets/images/estefi.png" alt="Foto Odontologa Estefania"
+                    class="img-fluid imagen--nosotros">
             </section>
         </div>
 
         <!--Seccion Juan-->
         <div class="row align-items-center">
             <section class="col-lg-6 col-xs-12">
-                <img src="../assets/images/juan.png" alt="Odontologo Juan" class="img-fluid imagen--nosotros">
+                <img src="../assets/images/juan.png" alt="Foto Odontologo Juan" class="img-fluid imagen--nosotros">
             </section>
             <section class="col-lg-6 col-xs-12 texto_home">
                 <h3>Doctor Juan Perez Chavez</h3>
@@ -124,6 +132,7 @@
 
     </main>
 
+    <!--Boton Whats-->
     <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
 
     <!--Footer-->
@@ -138,6 +147,7 @@
         </footer>
     </div>
 
+    <!-- JS de Bootstrap descargado-->
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
