--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La Clinica de Odontopediatria Manzo se 
+    especializa en la atención de la salud bucodental de los niños y niñas desde su nacimiento.
+    Se encuentra en la Ciudad de Querétaro, México">
+    <meta name="keywords" content="Odontopediatra, Odontopediatría, Manzo, Querétaro, México,
+    Dentista, Dentista para niños, niños, niñas, english spoken">
+
     <title>Servicios</title>
 
     <!--Link CSS de Bootstrap descargado-->
@@ -29,9 +35,9 @@
             <div class="col-lg-12 col-xs-12">
                 <nav class="navbar py-0 navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="#">
-                        <img class="d-inline-block align-top" id="Logo1" src="../assets/images/logo.png"
+                        <img class="d-inline-block align-top Logo1" src="../assets/images/logo.png"
                             alt="Logo Clinica">
-                        <h2 class="d-inline-block align-bottom">Odontopediatría Manzo</h2>
+                        <h1 class="d-inline-block align-bottom">Odontopediatría Manzo</h1>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav2"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +70,7 @@
     <main class="background">
         <h1 class="centrado">Servicios</h1>
 
-        <h3>Limpieza dental</h3>
+        <h2>Limpieza dental</h2>
         <p>
             Es un procedimiento indoloro, cómodo, rápido y efectivo mediante el cual tu
             odontólogo removerá manchas, sarro y placa bacteriana que podría afectar la salud
@@ -83,7 +89,7 @@
             <img class="imagen--servicios" src="../assets/images/limpieza.png" alt="Limpieza Dental">
         </div>
 
-        <h3>Resina dental</h3>
+        <h2>Resina dental</h2>
         <p>
             Las resinas dentales son una solución ideal que permite curar caries y corregir
             cavidades, lesiones o fisuras en los dientes de forma segura, estética y natural.
@@ -102,10 +108,10 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/resina.png" alt="Resina">
+            <img class="imagen--servicios" src="../assets/images/resina.png" alt="Resina Dental">
         </div>
 
-        <h3>Coronas dentales</h3>
+        <h2>Coronas dentales</h2>
         <p>
             Conserva la forma de tu dentadura, la correcta masticación, posición y fortalece
             tus dientes con este tratamiento.
@@ -122,11 +128,10 @@
         </p>
 
         <div class="centrado borde-abajo">
-            <img class="imagen--servicios" src="../assets/images/corona.jpg" alt="Corona">
+            <img class="imagen--servicios" src="../assets/images/corona.jpg" alt="Corona Dental">
         </div>
 
-
-        <h3>Endodoncia</h3>
+        <h2>Endodoncia</h2>
         <p>
             Evita que un diente tenga que ser extraído tras daño grave por caries, gracias
             a la endodoncia y endoposte.
@@ -148,7 +153,7 @@
             <img class="imagen--servicios" src="../assets/images/endodoncia.jpg" alt="Endodoncia">
         </div>
 
-        <h3>Blanqueamiento</h3>
+        <h2>Blanqueamiento</h2>
         <p>
             Una sonrisa deslumbrante en menos tiempo, con la última tecnología en blanqueamiento dental.
         </p>
@@ -161,8 +166,7 @@
             Dental">
         </div>
 
-
-        <h3>Periodoncia</h3>
+        <h2>Periodoncia</h2>
         <p>
             Una encía sana es la base de una dentadura fuerte, por eso prevenimos y resolvemos
             tus problemas de encías y en los huesos que sostienen tu dentadura.
@@ -178,6 +182,7 @@
         </div>
     </main>
 
+    <!--Boton whats-->
     <a href="https://api.whatsapp.com/send?phone=524423782450" class="btn-wsp" target="_blank"></a>
 
     <!--Footer-->
@@ -192,6 +197,7 @@
         </footer>
     </div>
 
+    <!-- JS de Bootstrap descargado-->
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
